--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        NIRAJ
-                        <span class="text-primary">SINGH YADAV</span>
+                        Abhishek
+                        <span class="text-primary">Patel</span>
                     </h1>
                     <div class="subheading mb-5">
                         VILLAGE CHAKALAM POST MOHAMMADABAD GHAZIPUR UTTAR PRADESH 2333227 ·
