--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                         <span class="text-primary">Patel</span>
                     </h1>
                     <div class="subheading mb-5">
-                        VILLAGE CHAKALAM POST MOHAMMADABAD GHAZIPUR UTTAR PRADESH 2333227 ·
-                        <a href="">nirajyadavnsy@gmail.com</a>
+                        BIGHAPUR UNNAO UTTAR PRADESH 209865·
+                        <a href="">abhishekbharatms@gmail.com</a>
                     </div>
                     <p class="lead mb-5">
                         Hi,I am a web devloper/desigener should focus to enhance skill to make colourful world.
