--- a/index.html
+++ b/index.html
@@ -82,32 +82,26 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">NATIONAL SKILL TRAINING INSTITUTE BENGALURU</h3>
                             <div class="subheading mb-3">PERSUING  ADVANCE DIPLOMA IN IT NETWORKING AND CLOUD COMPUTING</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>PERCENTAGE:</p>
+                            
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2019 - 2021</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">CENTRAL ITC JANGIPUR GHAZIPUR UP</h3>
-                            <div class="subheading mb-3">ITI IN ELECTRICION</div>
-                            <p>PERCENTAGE: 85.70</p>
-                        </div>
+                    
                         <div class="flex-shrink-0"><span class="text-primary"> 2015 - 2017</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">SWAMI VIVEKANAND INTER COLLEGE JANGIPUR GHAZIPUR UP</h3>
+                            <h3 class="mb-0">Pt D K College Unnao UP</h3>
                             <div class="subheading mb-3">INTERMEDIATE WITH SCIENCE STREAM</div>
-                            <p>PERCENTAGE: 76.80</p>
+                            <p>PERCENTAGE: 86.20</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"> 2013</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">INTER COLLEGE MOHAMMADABAD GHAZIPUR UP</h3>
+                            <h3 class="mb-0">PMHSS GHATAMPUR-KHURD UNNAO UP</h3>
                             <div class="subheading mb-3">HIGH SCHOOL</div>
-                            <p>PERCENTAGE: 64.17</p>
+                            <p>PERCENTAGE: 88.66</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"> 2010</span></div>
                     </div>
@@ -185,7 +179,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time playing cricket and cookink food. During the free time I enjoy listening songs and explorin news and articals.</p>
+                    <p>Apart from being a web developer, I enjoy most of my time reading books and cookink food. During the free time I enjoy listening songs and explorin news and articals.</p>
                     <p class="mb-0">When I am free, I follow a number of super heros movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
                 </div>
             </section>
@@ -195,7 +189,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
                     <p class="lead mb-5">
-                         I have completed 62 skills build courses and 1 badge of Machine Learning with Python.
+                         I have completed 100 skills build courses.
                     </p>
                 </div>
             </section>
