--- a/index.html
+++ b/index.html
@@ -87,15 +87,14 @@
                         <div class="flex-shrink-0"><span class="text-primary">2019 - 2021</span></div>
                     </div>
                     
-                        <div class="flex-shrink-0"><span class="text-primary"> 2015 - 2017</span></div>
-                    </div>
+                        
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Pt D K College Unnao UP</h3>
                             <div class="subheading mb-3">INTERMEDIATE WITH SCIENCE STREAM</div>
                             <p>PERCENTAGE: 86.20</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary"> 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"> 2016</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -103,7 +102,7 @@
                             <div class="subheading mb-3">HIGH SCHOOL</div>
                             <p>PERCENTAGE: 88.66</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary"> 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"> 2014</span></div>
                     </div>
                 </div>
             </section>
@@ -114,7 +113,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I have good Knowledge of Html CSS and typing.</p>
         </div>
 
         <div class="row skills-content">
